add 期末考週 題目2

--- a/content/期末考週.html
+++ b/content/期末考週.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -139,11 +139,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Visualization Stream << <a href='Visualization Stream.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>online test</h1>
-<p>1.已知左側綠色底座的 uArm 機械手臂, 其基座座標原點位於絕對座標 (1.0, 0.25, 0), 啟動模擬後 green_suctionpad_frame 座標原點則位於 (0.22859, 0.26047, 0.36576), 請列出運算式說明, 啟動模擬後 joint1, joint2 與 joint3 分別以逆時針旋轉 5 度後, 求 green_suctionpad_frame 的絕對座標值.</p>
-<div class="winkVideoControlBarProgressThumbClass">
-<p>Ans:(x:+1.000 y:+0.2500 z:+0.1795)</p>
-</div>
+    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <br /><h1>期末考週</h1>
+<p><span>零件檔繪製</span></p>
+<p><span>我是採用nx12繪製的~因為這學期讓我更熟悉nx的大部分的繪圖及組裝技巧，可能在繪製的過程中發現了一堆問題，但之後會上網搜尋影片參考教學及詢問同學!</span></p>
+<p><br/><span></span></p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -155,37 +154,17 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="https://40923210.github.io/cd2022/downloads/online-1.mp4" type="video/mp4"/></video>
-<div class="winkVideoOverlayClass"></div>
-<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-<div class="winkVideoControlBarProgressLeftClass"></div>
-</div>
-</div>
-<p>-------------------------------------</p>
-<p>2.已知左側 uarm 前方的紅色方塊頂端中心座標值為 (0.2, 0.4, 0.1), 請列出運算式說明左側 uarm 機械手臂的 joint1, joint2 與 joint3 該如何旋轉才能讓 end effector 的吸盤末端中心點移動至紅色方塊頂端中心?</p>
-<p>Ans:(a:-000.01 b:-000.047 g:-000.0060)</p>
-<p></p>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 20,
-  buttonFrameLength: 10,
-  buttonFrameOffset: 5,
-  frameStops: {
-  },
-};
-</script>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="https://40923210.github.io/cd2022/downloads/online-2.mp4" type="video/mp4"/></video>
+      <source src="./../downloads/final q2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
 <div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
 <div class="winkVideoControlBarProgressRightClass"></div>
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
-<br />Visualization Stream << <a href='Visualization Stream.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div></div></div></div></div></div></div><br />w17 << <a href='w17.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
