change 期末考週 題目2 absolute site

--- a/config/content.htm
+++ b/config/content.htm
@@ -843,7 +843,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="/downloads/final q2.mp4" type="video/mp4"/></video>
+      <source src="https://40923210.github.io/cd2022/downloads/final q2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
