--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -830,6 +830,7 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressFilledMiddleClass"></div>
 <h1>期末考週</h1>
 <p><span>零件檔繪製</span></p>
+<p><span>我是採用nx12繪製的~因為這學期讓我更熟悉nx的大部分的繪圖及組裝技巧，可能在繪製的過程中發現了一堆問題，但之後會上網搜尋影片參考教學及詢問同學!</span></p>
 <p><br/><span></span></p>
 <script>
 var winkVideoData = {
@@ -842,8 +843,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="/downloads/final q2.mp4" type="video/mp4"/>
-</video>
+      <source src="/downloads/final q2.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
