--- a/content/期末考週.html
+++ b/content/期末考週.html
@@ -189,6 +189,33 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>---------------------------------------------------------</p>
+<p>透過40923201、40923205、40923217和我來測試</p>
+<p>youtube連結:<a href="https://www.youtube.com/watch?v=4zKlkiC-8kA">XML UI slider控制功能</a></p>
+<p>利用teams與同組組員進行測試XML UI slider控制，一開始還搞不太清楚那個是甚麼一回事，到最後知道那是調整三軸後，發現超級有趣!但重要的是可能我coppeliasim的運用可能要更加熟練!</p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="./../downloads/final q4.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
 </div></div></div></div></div></div></div><br />w17 << <a href='w17.html'>Previous</a> </div>
         
     <!-- footer -->
