add 期末考週 題目5

--- a/content/期末考週.html
+++ b/content/期末考週.html
@@ -191,7 +191,7 @@ var winkVideoData = {
 <div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p>---------------------------------------------------------</p>
-<p>透過40923201、40923205、40923217和我來測試</p>
+<p>透過40923201、40923205、40923217和我進行開會及測試</p>
 <p>youtube連結:<a href="https://www.youtube.com/watch?v=4zKlkiC-8kA">XML UI slider控制功能</a></p>
 <p>利用teams與同組組員進行測試XML UI slider控制，一開始還搞不太清楚那個是甚麼一回事，到最後知道那是調整三軸後，發現超級有趣!但重要的是可能我coppeliasim的運用可能要更加熟練!</p>
 <script>
@@ -206,6 +206,32 @@ var winkVideoData = {
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
       <source src="https://40923210.github.io/cd2022/downloads/final q4.mp4" type="video/mp4"/></video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>---------------------------------------------------------</p>
+<p><span>透過40923201、40923205、40923217和我進行開會及測試</span></p>
+<p><span>youtube連結:<a href="https://www.youtube.com/watch?v=BMpqb0Z6gho">手動操控或程式操控的方式，錄製 block 方塊零件的取放</a></span></p>
+<p><span>利用teams與同組組員進行測試手動操控或程式控制的方式，雖然跟上一個影片其實類似，但就是有兩個方法可易控制三軸，但這種更要了解的可能就是程式的理解吧~但我還是盡力與組員合作完成!</span></p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="./../downloads/final q5.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
