change 期末考週 題目5 absolute site

--- a/config/content.htm
+++ b/config/content.htm
@@ -904,6 +904,10 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
+<div class="winkVideoPlayOverlayClass"></div>
+<div class="winkVideoPlayOverlayClass"></div>
+<div class="winkVideoPlayOverlayClass"></div>
+<div class="winkVideoPlayOverlayClass"></div>
 </div>
 <p>---------------------------------------------------------</p>
 <p><span>透過40923201、40923205、40923217和我進行開會及測試</span></p>
@@ -920,7 +924,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="/downloads/final q5.mp4" type="video/mp4"/></video>
+      <source src="https://40923210.github.io/cd2022/downloads/final q5.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
