add 期末考週 題目6

--- a/content/期末考週.html
+++ b/content/期末考週.html
@@ -245,6 +245,33 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
+</div>
+<p>---------------------------------------------------------</p>
+<p><span>透過40923201、40923205、40923217和我進行開會及測試</span></p>
+<p><span>youtube連結:<a href="https://www.youtube.com/watch?v=0j1EZ6uueqw">跨網路 Python remote API 的方式，錄製圖形介面 slider 控制前三軸的轉動</a></span></p>
+<p><span>利用teams與同組組員進行測試跨網路Python remote API控制的方式，這個對我來說就有點難度，我一開始不太知道要怎麼表達及控制，但後續因同組組員討論及教導，有慢慢理解!</span></p>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 20,
+  buttonFrameLength: 10,
+  buttonFrameOffset: 5,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
+      <source src="./../downloads/final q6.mp4" type="video/mp4"/>
+</video>
+<div class="winkVideoOverlayClass"></div>
+<div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
+<div class="winkVideoControlBarProgressLeftClass"></div>
+<div class="winkVideoControlBarProgressEmptyMiddleClass"></div>
+<div class="winkVideoControlBarProgressRightClass"></div>
+<div class="winkVideoControlBarProgressFilledMiddleClass"></div>
+<div class="winkVideoControlBarProgressThumbClass"></div>
+</div>
+<div class="winkVideoPlayOverlayClass"></div>
 </div></div></div></div></div></div></div><br />w17 << <a href='w17.html'>Previous</a> </div>
         
     <!-- footer -->
