--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -924,7 +924,7 @@ var winkVideoData = {
 };
 </script>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData" height="630" width="1008"> muted="true"&gt;
-      <source src="/downloads/final q5.mp4" type="video/mp4"/></video>
+      <source src="https://40923210.github.io/cd2022/downloads/final q5.mp4" type="video/mp4"/></video>
 <div class="winkVideoOverlayClass"></div>
 <div class="winkVideoControlBarClass"><button class="winkVideoControlBarPlayButtonClass"></button> <button class="winkVideoControlBarPauseButtonClass"></button>
 <div class="winkVideoControlBarProgressLeftClass"></div>
@@ -934,4 +934,8 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div></div></div></div></div></div></div>
+</div>
+<p>---------------------------------------------------------</p>
+<p><span>透過40923201、40923205、40923217和我進行開會及測試</span></p>
+<p><span>youtube連結:<a href="https://www.youtube.com/watch?v=0j1EZ6uueqw">跨網路 Python remote API 的方式，錄製圖形介面 slider 控制前三軸的轉動</a></span></p>
+<p><span>利用teams與同組組員進行測試跨網路Python remote API控制的方式，這個對我來說就有點難度，我一開始不太知道要怎麼表達及控制，但後續因同組組員討論及教導，有慢慢理解!</span></p></div></div></div></div></div></div>
