--- a/content/期末考週.html
+++ b/content/期末考週.html
@@ -271,7 +271,9 @@ var winkVideoData = {
 <div class="winkVideoControlBarProgressThumbClass"></div>
 </div>
 <div class="winkVideoPlayOverlayClass"></div>
-</div></div></div></div></div></div></div><br />w17 << <a href='w17.html'>Previous</a> </div>
+</div>
+<p>---------------------------------------------------------</p>
+<p>期末心得:這個學期學到很多東西，像一開始w3的38個影片由小組分配，觀看英文版的影片學習nx，有學習到一點點的英文，也有學到一些nx的畫圖技巧；再來就是利用w3學習到的繪圖技巧及畫圖功能來完成w8的作業，畫圖和組合雖然花了很長的一段時間才做完，但做完之後，發現超級有成就感；不過將檔案丟入coppeliasim，就又是另一種問題，因為接觸coppeliasim的時間真的不長，所以就照著老師的步驟及詢問同學來完成!這次的最後兩週作業，都有在最後期限完成，做出來真的超級有成就感!這學期用wink錄影片用得更順手，也非常地順利，這學期新增的是leo，他是一個可以編輯blog的編輯器，一開始不知道它的用途，所以很少上去更新作業，但後來慢慢理解後，就每周基本上都會更新作業，這學期雖然很多東西都有一些些的難度，但我都有盡我的能力去完成!</p></div></div></div></div></div></div><br />w17 << <a href='w17.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
